# Netflow_Pi

./: active_targets.json  autoencoder.py  autoencoder_runtime.py  live_capture.py  main.py  pyproject.toml  start_sentinel.py  whitelist.json
dashboard/backend/api/: autoencoder_manager.py  urls.py  views.py
dashboard/frontend/src/: App.jsx
models/autoencoder/: autoencoder.keras  metadata.json  scaler.pkl  threshold.npy
runtime/: autoencoder_status.json
