[project]
name = "testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
    "pathway[all,llm,xpack-llm,xpack-llm-docs]>=0.29.0",
    "pdf2image>=1.17.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "unstructured>=0.18.31",
    "xai>=0.3.0",
    "daphne>=4.0.0",
    "channels>=4.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.0.0",
    "spicy>=0.16.0",
    "joblib>=1.4.2",
    "numpy>=2.3.5",
    "scipy>=1.17.0",
    "tensorflow>=2.16.0",
    "pandas<3.0",
    "scikit-learn>=1.8.0",
]
